feature(cache): implemented Cache into GET functions for listings
